[package]
name = "rust_p2p"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["signal_server"]

[workspace.dependencies]
webrtc = "0.11"


[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.10", features = ["v4"] }
webrtc = { workspace = true }
signal_server = { path = "./signal_server" }

[dev-dependencies]
tokio = "1.40"
serde_json = { version = "1.0" }
lazy_static = "1.5"
